Tried to tidy up the server and protocol sections a little. Started planning the server implementation section.

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -82,7 +82,13 @@ The use of informal notation for the use cases was, in retrospect, ill-conceived
 
 With these use cases we started to design a GUI that could accommodate the desired features. Although many UI sketches were made, they were all minor variations on the core design which we derived from the traditional instant messenger model, such as used in Windows Live.
 
-\includegraphics[width=7cm]{Design/diagrams/Main_UI.png}
+\begin{figure}[!h]
+    \begin{center}
+        \includegraphics[width=7cm]{Design/diagrams/Main_UI.png}
+        \caption{The original wireframe for the main window of the client.}
+        \label{lockingDia}
+    \end{center}
+\end{figure}
 
 {\bf Walkthough}
 
@@ -114,7 +120,13 @@ With these use cases we started to design a GUI that could accommodate the desir
 
 The above wireframe is the main window the user will see after they have logged in. The layout is typical of instant messenger programs, and represents what users would expect to see.
 
-\includegraphics[width=7cm]{Design/diagrams/Chat_Box.png}
+\begin{figure}[!h]
+    \begin{center}
+        \includegraphics[width=7cm]{Design/diagrams/Chat_Box.png}
+        \caption{The original wireframe design of a chat window for the client.}
+        \label{lockingDia}
+    \end{center}
+\end{figure}
 
 This wireframe represents the window which is created when a chat is initiated, either by themselves or another user. The chat box has a similar layout to the main window, to aid consistency. The user details are at the top, the main body of content is in the middle, and the user operations are at the bottom.
 
