--- a/TP3/dissertation/Implementation/server.tex
+++ b/TP3/dissertation/Implementation/server.tex
@@ -1,2 +1,7 @@
 \section{Server}
-Server stuff will go here soon, I promise.
+
+\subsection{Networking and Sockets}
+
+\subsection{Buffers}
+
+\subsection{Detecting Abuse and Enforcing Limits}
