--- a/TP3/dissertation/Design/protocol.tex
+++ b/TP3/dissertation/Design/protocol.tex
@@ -101,7 +101,7 @@ The \texttt{:ERROR:} command can be very cumbersome to use as there are a very l
 
 \subsection{Client-Server Interaction}
 
-Once a client has entered the logged-in state it is able to send any command at any time, and in any order. The server is also able to send unsolicited commands to the client such as invites, updates and messages. As such, both the client and server have to be able to operate in a stateless way, treating each command they receive separate to all other commands. It is quite possible, and reasonable, for a client to send several commands to the server before it receives a response to the first. This eliminates the need to wait between some commands and allows for much more efficient client-server communication.
+Once a client has entered the logged-in state it is able to send any command at any time, and in any order. For every command a client sends, the server returns a response. The server is also able to send unsolicited commands to the client such as invites, updates and messages. As such, both the client and server have to be able to operate in a stateless way, treating each command they receive separate to all other commands. It is quite possible, and reasonable, for a client to send several commands to the server before it receives a response to the first. This eliminates the need to wait between some commands and allows for much more efficient client-server communication.
 
 \newpage
 \begin{landscape}
@@ -141,6 +141,6 @@ There are still some commands which could arguably benefit from being merged. Fo
 
 During the implementation of GIM there were several modifications made to the format of the data segment for some commands. These were brought on by a desire to keep the protocol consistent across all commands. There was often a sense of confusion about how the data segment for each command was split into sections as each command had a different format; some used newlines, some used commas, and some used spaces as separators. In the end we chose to use spaces as separators in all commands except the \texttt{:INFO:} command where newlines made more sense. 
 
-Error handling has been one of the weaker areas of the GIM Protocol. Errors were mostly an after-thought and have several significant issues which need to be addressed. For example, there is currently no easy way of matching en error to a particular command. While it is possible to work backwards by counting the number of responses until we find the matching command it is not practical and it is overly complicated to do this. One solution might be introducing sequence numbers to the Protocol. Each command could be assigned a sequence number or unique identifier of some type. Responses could use the same identifier so that the commands and responses could be easily matched. However this would add a lot of overhear and unnecessary complexity to the protocol, something which we have tried to avoid. Another big problem with errors is the sheer number of possible errors. Almost every command can generate several errors, and every error must have a unique argument identifying the type of error. The server specifies over 70 possible error conditions, and every one of these will generate an \texttt{:ERROR:} response which must be dealt with. This means that the \texttt{:ERROR:} command is extremely complex and confusing to use. A possible solution might be to move away from using arguments to specify the error and instead adopt the same style used by HTTP. A set of errors codes could be used, with numbers between particular ranges reserved for errors of a particular type. For example, the numbers 500-599 could be reserved for server errors, while numbers between 0-100 could be authorisation errors.
+Error handling has been one of the weaker areas of the GIM Protocol. Errors were mostly an after-thought and have several significant issues which need to be addressed. For example, there is currently no easy way of matching an error to a particular command. While it is possible to work backwards by counting the number of responses until we find the matching command it is not practical and it is overly complicated to do this. One solution might be introducing sequence numbers to the Protocol. Each command could be assigned a sequence number or unique identifier of some type. Responses could use the same identifier so that the commands and responses could be easily matched. However this would add a lot of overhear and unnecessary complexity to the protocol, something which we have tried to avoid. Another big problem with errors is the sheer number of possible errors. Almost every command can generate several errors, and every error must have a unique argument identifying the type of error. The server specifies over 70 possible error conditions, and every one of these will generate an \texttt{:ERROR:} response which must be dealt with. This means that the \texttt{:ERROR:} command is extremely complex and confusing to use. A possible solution might be to move away from using arguments to specify the error and instead adopt the same style used by HTTP. A set of errors codes could be used, with numbers between particular ranges reserved for errors of a particular type. For example, the numbers 500-599 could be reserved for server errors, while numbers between 0-100 could be authorisation errors.
 
 The protocol has changed considerably since its first draft and has undergone substantial improvements in terms of ease of use, simplicity, and consistency. Although there are still some minor tweaks which could be made to further the improve the protocol, it is currently in a stable and usable state. Future extensions to the protocol might include the addition of support for other features such as file transfers and VoIP.
