i lost the race

--- a/TP3/dissertation/Evaluation/overview.tex
+++ b/TP3/dissertation/Evaluation/overview.tex
@@ -1,4 +1,3 @@
 \section{Overview}
 
-This section will discuss how we evaluated that our system was functioning according to our requirements. Because our project had a focus on technical issues, we did not conduct any formal usability evaluations with potential users. However, we did conduct many informal testing sessions under normal conditions (with many users logged on), and to get some feedback about our interface and features. Instead, our evaluations were more focused on ensuring our system complied to the specifications we have drawn out in section \ref{features}. As our system is modular, we decided a sensible boundary for our test harnesses would be around the client and the server. Our goal in testing was focused on ensuring the client and server performed their roles as outlined in the GIM protocol, and to attempt to ensure that our our threading was robust.  These aspects, and an analysis of our testing methods, will be outlined in sections \ref{server_eval} and \ref{client_eval}. Section \ref{user_eval} will briefly outline how we evaluated our system with users, as although the interface was not the main concern in our project, the interface was still a significant aspect. 666 muta fucker!
-
+This section will discuss how we evaluated that our system was functioning according to our requirements. Because our project had a focus on technical issues, we did not conduct any formal usability evaluations with potential users. However, we did conduct many informal testing sessions under normal conditions (with many users logged on), and to get some feedback about our interface and features. Instead, our evaluations were more focused on ensuring our system complied to the specifications we have drawn out in section \ref{features}. As our system is modular, we decided a sensible boundary for our test harnesses would be around the client and the server. Our goal in testing was focused on ensuring the client and server performed their roles as outlined in the GIM protocol, and to attempt to ensure that our our threading was robust.  These aspects, and an analysis of our testing methods, will be outlined in sections \ref{server_eval} and \ref{client_eval}. Section \ref{user_eval} will briefly outline how we evaluated our system with users, as although the interface was not the main concern in our project, the interface was still a significant aspect.
