--- a/TP3/dissertation/Design/server.tex
+++ b/TP3/dissertation/Design/server.tex
@@ -10,12 +10,15 @@ The GIM server is primarily responsible for synchronising the communication betw
     \item{Storing user information such as nicknames, passwords, display pictures, friend lists, etc.}
 \end{itemize}
 
+%Dont end a section with a list
+
 \subsection{Server Structure}
 
 From the very beginning the server was designed to be secure, scalable, and simple. Users must trust it to keep their information safe and route messages correctly, and it must be able to cope with any number of connected clients.
 
 In order to manage this, the server generates a new worker for every connected client. This new worker acts as the single point of contact for its respective client. This greatly simplifies the design of the server as we can treat each connection individually and allows the server to easily scale to a large number of clients.
 
+% Refer to figures by numbers from written text
 \begin{figure}[!h]
     \begin{center}
         \includegraphics[scale=0.6]{Design/diagrams/server_workers.png}
@@ -24,9 +27,9 @@ In order to manage this, the server generates a new worker for every connected c
     \end{center}
 \end{figure}
 
-Each worker has 2 buffers, one which stores commands read from the network (the command buffer), and one which stores commands to be written to the network (the response buffer). The worker continually reads commands from the command buffer, processes them, and puts the responses into the response buffer. At the same time the worker is also performing network reads and writes to fill and empty the respective buffers.
+Each worker has two buffers, one which stores commands read from the network (the command buffer), and one which stores commands to be written to the network (the response buffer). The worker continually reads commands from the command buffer, processes them, and puts the responses into the response buffer. At the same time the worker is also performing network reads and writes to fill and empty the respective buffers.
 
-The buffers allow the worker to run using several threads which increases the performance on multi-core systems as the server is able to read from the network, process commands, and write to the network in a truly concurrent fashion. This means that at any one time a worker could be handling up to 3 different commands, each at a different stage of execution, and still have several commands stored in the buffers waiting to be used.
+The buffers allow the worker to run using several threads which increases the performance on multi-core systems as the server is able to read from the network, process commands, and write to the network in a truly concurrent fashion. This means that at any one time a worker could be handling up to three different commands, each at a different stage of execution, and still have several commands stored in the buffers waiting to be used.
 
 \begin{figure}[!h]
     \begin{center}
@@ -39,7 +42,7 @@ The buffers allow the worker to run using several threads which increases the pe
 \subsection{User Accounts}
 A user is a registered account on the server with a unique identifier (an email address), password, nickname, personal message, display picture, status, and friend list. 
 
-
+% Change to a bulleted list
 \subsubsection{Identification}
 The user's identifier and password are used to authenticate the user at login. These cannot be changed one the account has been created. 
 
@@ -61,7 +64,7 @@ A user can have one of only two states, Online or Offline. States should not be 
 \subsubsection{Friend List}
 Each user has their own Friend List, a list of users who have accepted a friend request from the owner of the Friend List. When a user accepts a friend request, the sender and receiver are added to each other's Friend List.
 
-
+%Explain the design choices below. 
 \subsection{Client-to-Client Messaging}
 \label{c2c}
 No direct client to client communication is possible, however workers and in an ad-hoc fashion, clients, are able to indirectly communicate with other clients (i.e. clients to which they are not connected) by passing commands to the other client's worker. This is the server's main method of inter-client communication and relies heavily on the use of the buffers to pass messages from one worker to the network writer or command processor of another worker.
@@ -71,7 +74,7 @@ As the protocol defines no client to client communication is possible before a u
 \subsection{Rooms and Message Routing}
 \label{message_routing}
 
-Message routing in the server is fairly simple because of the use of Rooms. A Room is a collection of one or more users and each Room has a unique identifier. In order to join a Room a user must either create a new Room (in which case they are automatically placed into the Room) or they must be invited to the Room by a user already in the Room. A Room can be one of two types: Personal or Group. A Personal Room is much more restrictive than a Group Room. A Personal Room must be provided with the identifier of one other user at time of creation and is limited to only 2 users. Once a Personal Room has been created you cannot invite any other users. A Group Room has no such restrictions. Any number of users may be invited to a Group Room at any time.
+Message routing in the server is fairly simple because of the use of rooms. A room is a collection of one or more users and each room has a unique identifier. In order to join a room a user must either create a new room (in which case they are automatically placed into the room) or they must be invited to the room by a user already in the room. A room can be one of two types: personal or group. A personal room is much more restrictive than a group room. A personal room must be provided with the identifier of one other user at time of creation and is limited to only 2 users. Once a personal room has been created you cannot invite any other users. A group room has no such restrictions. Any number of users may be invited to a group room at any time.
 
 All chat messages in GIM are sent to Rooms rather than particular users. The server must maintain a list of the users in each room, and upon receipt of a message for that room, forward it to all of the users in the room (excluding the sender of the message). This is done using the method described in section \ref{c2c}. A \texttt{:MESSAGE:} command is generated and placed into the Response Buffer of the worker assigned to each of the recipients ready for the worker to send to the client.
 
@@ -80,7 +83,7 @@ One of the server's most critical responsibilities is notifying users of changes
 
 \begin{enumerate}
 \item{The subscriber has the subscribee in their friend list, or had them in their friend list at some point in the past}
-\item{Both the subscriber and subscribee are in the same room}
+\item{Both the subscriber and subscribee are in the same room}5
 \end{enumerate}
 
 When a user updates their status or changes any piece of their user information such as their nickname or personal message, the server needs to notify other clients so that they can update their information. The server generates a list of subscribers for this user and removes offline and blocked users. It then issues an \texttt{:UPDATE:} command to each of the clients, notifying them of the user and the piece of information which has been updated. Note that the server does not send the updated information, it merely notifies the client of the update, allowing it to request the updated information for the server when, and if it needs it.
@@ -90,7 +93,8 @@ Subscriptions are also used as a method of access control. A user is only able t
 \subsection{Synchronisation}
 The server has a large section of backing data which stores all of the users, rooms, workers and any other operational data required by the server. Due to the highly concurrent nature of the server it is very important to ensure that the data is properly synchronised. This is to prevent race conditions where two writes occur on an object at the same time giving an unpredictable output. 
 
-\begin{figure}[!h]
+%Refer to figure my number from text
+\begin{figure}
     \begin{center}
         \includegraphics[scale=0.6]{Design/diagrams/server_race_condition.png}
         \caption{Unsynchronised workers updating the same object at the same time, resulting in a race condition and giving the unexpected value of 6 rather than 7.}
