Did something I can't remember tbh, nothing much...

--- a/TP3/dissertation/Requirements/features.tex
+++ b/TP3/dissertation/Requirements/features.tex
@@ -74,7 +74,6 @@ The `Must Have' category has features that were taken from the initial problem s
 
 Features which we `Would Like To Have' are the lowest priority, and thus aren't important to implement. Beyond the basic concept of profiles, we had not decided how these would function or what they would contain. We did not think they were importantto include, as they aren't necessary for communication, and many instant messengers don't use them. Custom commands seemed unnecessary, since they require an overhead of knowing what the commands are and how they work, and we can provide functionality well enough with a GUI. We decided themes didn't seem part of useful functionality, but might be nice to add if we had time. Two of the more demanding requirements we conceived were plug-in support and VoIP. While these were desirable features, they were considered to be out of the scope of the project. Despite that fact, we decided to include them so we could aim to implement them at a later time.
 
-
 \subsection*{Rejected Features}
 
 There were some features which we agreed were not desirable or worth our time implementing.
@@ -92,3 +91,4 @@ There were some features which we agreed were not desirable or worth our time im
 
 Nudges and winks are considered by many to be an irritation which is prone to abuse, hence our decision to not include them. Spell Checking was considered, but due to the typically informal nature of IM conversations and the fact that people purposely misspell words at times, it was not included.
 
+The features outlined here provided us with a variety of goals for the system. As no members of the team had previous experience working in a project of this scale, the time required for implementation was unclear. The MoSCoW list allowed us to seperate our concerns into manageable priorities which could be acheived incrementally.
