Updated protocol section to fix things Colin suggested

--- a/TP3/dissertation/Design/protocol.tex
+++ b/TP3/dissertation/Design/protocol.tex
@@ -25,10 +25,13 @@ In practice there are several clients connected to the server at once, however a
 
 \subsection{Syntax}
 
-% Either expand the discussion of why the protoocl is text based, and uses a particular command format, or reference where that discussion occurs.
-The GIM Protocol uses a simple, text based syntax. Each full command begins with a colon followed by a command name and its arguments. A second colon marks the end of the header and beginning of the data segment. A semi-colon marks the end of the data segment and the termination of the command. The basic structure of a full command is shown below:
+The GIM Protocol uses a simple, text based syntax. We decide to use a text based format as they have several advantages over binary formats. In particular, we wanted the protocol to be easy to use, human-readable and easy to debug. Although text based formats are much more difficult to parse, they fit with our vision much better than binary based protocols.
+
+Each full command begins with a colon followed by a command name and its arguments. A second colon marks the end of the header and beginning of the data segment. A semi-colon marks the end of the data segment and the termination of the command. The basic structure of a full command is shown below:
 
 \texttt{:<COMMAND\_NAME> <ARGUMENTS>: <DATA>;}
+
+We chose this format as it clearly separates the commands and arguments from the data, making them easier to parse. It also relies on very standard characters for begging and terminating commands and does not rely on new lines as command separators, which have historically caused problems in protocols (although newlines are sometimes used in the \texttt{<DATA>} segment of commands).
 
 Commands names are predefined and \texttt{<COMMAND\_NAME>} can be any 1 of the following 19 values:
 
@@ -86,20 +89,19 @@ Any non-letter or digit (anything not a-Z or 0-9) in the data segment of a comma
 
 Display pictures, which are small images in JPEG format, cannot be transferred easily using the GIM Protocol without first being converted to a text based format. JPEG and any other binary data is encoded using BASE64 encoding which is widely used and fairly efficient in terms of bandwidth and processing time.
 
-By ensuring that the data segement is encoded, it makes the protocol very easy to parse as we can safely split the data segment into separate parts without worrying about how data from the user is formatted. This means we can guarantee that every occurrence of a white-space character in the data segment is safe to use for splitting the data.
+By ensuring that the data segment is encoded, it makes the protocol very easy to parse as we can safely split the data segment into separate parts without worrying about how data from the user is formatted. This means we can guarantee that every occurrence of a white-space character in the data segment is safe to use for splitting the data.
 
 Clients connected to the server are limited to sending 100 commands in a rolling 5 second window. Normal usage should result in a much lower rate (less than 5 per second) and anything more than than this most likely indicates a malfunctioning or malicious client. In the event a client exceeds this limit, the server closes the connection with the client. % Is any error message sent?
 
-% What happens when this is exceeded?
-The data segment of commands sent by the client is limited to 8192 characters in length. This includes data that has been encoded, so a single @ character encoded as \texttt{\SLASH U+0040} counts for 7 characters towards the limit. The only exception to this rule is the \texttt{:SET DISPLAY\_PIC:} command, which is used to set a users display picture. The limit for this command is 4x greater than that of a normal command (32,768 characters or around 24kb worth of JPEG data). The server has no such limits and can send commands of any length.
+The data segment of commands sent by the client is limited to 8192 characters in length. This includes data that has been encoded, so a single @ character encoded as \texttt{\SLASH U+0040} counts for 7 characters towards the limit. The only exception to this rule is the \texttt{:SET DISPLAY\_PIC:} command, which is used to set a users display picture. The limit for this command is 4x greater than that of a normal command (32,768 characters or around 24kb worth of JPEG data). If a client exceeds this limit then the server should close the connection to the client. The server itself has no such limits and can send commands of any length.
 
 \subsection{Heart Beat}
 
-In order to ensure that clients are working correctly and have not disconnected or crashed without closing the connection, the protocol specifies that a client should send at least 1 valid command every 15 seconds. This can be problematic if the client is sitting idle as the vast majority of commands have side effects which may be undesirable. In order to avoid this the protocol has the \texttt{:PING:} and \texttt{:PONG:} commands. The \texttt{:PING:} command can be sent by the client at any time to signal that it is still active, without any side-effects. The server will always respond with the \texttt{:PONG:} command, which got its name in an attempt to bring some humour into the protocol. %Also keeps NAT bindings alive
+In order to ensure that clients are working correctly and to ensure that NAT bindings do not timeout, the protocol specifies that a client should send at least 1 valid command every 15 seconds. This can be problematic if the client is sitting idle as the vast majority of commands have side effects which may be undesirable. In order to avoid this the protocol has the \texttt{:PING:} and \texttt{:PONG:} commands. The \texttt{:PING:} command can be sent by the client at any time to signal that it is still active, without any side-effects. The server will always respond with the \texttt{:PONG:} command, which got its name in an attempt to bring some humour into the protocol.
 
 \subsection{Error Handling}
 
-The protocol specifies an \texttt{:ERROR:} command which the server may send if it has received a command it cannot fulfill. Almost all of the commands which can be sent by the client, with the exception of the \texttt{:PING:} command, can generate an \texttt{:ERROR:}. The specific type of error is signified by the arguments of the command, for example, an attempt to login with incorrect details might yield \texttt{:ERROR LOGIN\_DETAILS\_INCORRECT:;}. %Is there a response for when this is sucessful?
+The protocol specifies an \texttt{:ERROR:} command which the server may send if it has received a command it cannot fulfill. Almost all of the commands which can be sent by the client, with the exception of the \texttt{:PING:} command, can generate an \texttt{:ERROR:}. The specific type of error is signified by the arguments of the command, for example, an attempt to login with incorrect details might yield \texttt{:ERROR LOGIN\_DETAILS\_INCORRECT:;}, while a successful login will always yield \texttt{:AUTH LOGGEDIN:;}
 
 The \texttt{:ERROR:} command can be very cumbersome to use as there are a very large number of arguments (usually several for every different command) and it can be difficult to match an error to a command as there is no identification of the command which caused it. Possible changes to address these issues are discussed in section \ref{protocol_evol}.
 
@@ -119,11 +121,12 @@ Once a client has entered the logged-in state it is able to send any command at 
 \end{landscape}
 
 Figure \ref{interactionDia} shows typical usage of the GIM protocol. The following is a detailed description of the diagram.
+
 \begin{enumerate}
 \item{A client connects, attempts to log in using the \texttt{:AUTH LOGIN:} command, and waits for a reply.}
 \item{The server responds \texttt{:AUTH OKAY:} signifying that the information was correct and the user has been logged in.}
-\item{The client sets the user's status to ONLINE and immediately requests the user's friendlist from the server, without waiting for a response to the \texttt{:SET STATUS:} command.}
-\item{The client receives the user's friendlist from the server and issues a \texttt{:GET:} command requesting the nickname and status of everyone in the friendlist.}
+\item{The client sets the user's status to ONLINE and immediately requests the user's friend list from the server, without waiting for a response to the \texttt{:SET STATUS:} command.}
+\item{The client receives the user's friend list from the server and issues a \texttt{:GET:} command requesting the nickname and status of everyone in the friend list.}
 \item{The server receives the \texttt{:GET:} commands and responds with an \texttt{:INFO:} command containing the requested data.}
 \item{Several seconds later the user is invited to a room and attempts to join it.}
 \item{The server responds to the request to join the room with \texttt{:OKAY:} and the client requests a list of users in the room.}
@@ -134,7 +137,7 @@ Figure \ref{interactionDia} shows typical usage of the GIM protocol. The followi
 \item{The client sends the \texttt{:QUIT:} command to the server and closes the connection. The server logs the user out and closes the connection.}
 \end{enumerate}
 
-% Dont end with a bullet point list, need a wrap up somewhere
+This demonstrates the protocols ability to function without waiting for a reply to the previous command but also that it is sometimes necessary for the client to wait for data from the server. It also shows the server's ability to send unsolicited commands and the need for the client to be aware and cope with out of order responses from the server (i.e., the next message it receives may not be the response to the previous command).
 
 \subsection{Protocol Evolution}
 \label{protocol_evol}
@@ -143,11 +146,10 @@ The GIM Protocol has undergone several significant changes since its first draft
 
 A prime example of this is the \texttt{:FRIEND:} command. What was originally 6 separate commands to manage a user's friend list (adding, deleting, blocking, accepting friend requests, etc.) became a single command with several possible arguments. This grouped the related functionality of each command together. While the single command is more complex, it is still easier to use and remember than 6 separate commands.
 
-There are still some commands which could arguably benefit from being merged. For example, it would make sense for the \texttt{:LOGOUT:} command to be part of the \texttt{:AUTH:} command which allows clients to login and register; all of these actions are conceptually similar. However, the \texttt{:LOGOUT:} command is not available unless the user is in the logged-in state, so one could argue that it should not be part of the \texttt{:AUTH:} command. The decision to keep them separate was made purely on personal preference as there were no clear advantages for either choice. %The fact that they become available at different times is a clear advantage
+There are still some commands which could arguably benefit from being merged. For example, it would make sense for the \texttt{:LOGOUT:} command to be part of the \texttt{:AUTH:} command which allows clients to login and register; all of these actions are conceptually similar. However, the \texttt{:LOGOUT:} command is not available unless the user is in the logged-in state, so one could also argue that it should not be part of the \texttt{:AUTH:} command.
 
-During the implementation of GIM there were several modifications made to the format of the data segment for some commands. These were brought on by a desire to keep the protocol consistent across all commands. There was often a sense of confusion about how the data segment for each command was split into sections as each command had a different format; some used newlines, some used commas, and some used spaces as separators. In the end we chose to use spaces as separators in all commands except the \texttt{:INFO:} command where newlines made more sense. %Why?
+During the implementation of GIM there were several modifications made to the format of the data segment for some commands. These were brought on by a desire to keep the protocol consistent across all commands. There was often a sense of confusion about how the data segment for each command was split into sections as each command had a different format; some used newlines, some used commas, and some used spaces as separators. In the end we chose to use spaces as separators in all commands except the \texttt{:INFO:} command where newlines made more sense in order to keep the line length of a the command down and as human-readable as possible.
 
-%This is how sip works (sequence numberS)
-Error handling has been one of the weaker areas of the GIM Protocol. Errors were mostly an after-thought and have several significant issues which need to be addressed. For example, there is currently no easy way of matching an error to a particular command. While it is possible to work backwards by counting the number of responses until we find the matching command it is not practical and it is overly complicated to do this. One solution might be introducing sequence numbers to the Protocol. Each command could be assigned a sequence number or unique identifier of some type. Responses could use the same identifier so that the commands and responses could be easily matched. However this would add a lot of overhear and unnecessary complexity to the protocol, something which we have tried to avoid. Another big problem with errors is the sheer number of possible errors. Almost every command can generate several errors, and every error must have a unique argument identifying the type of error. The server specifies over 70 possible error conditions, and every one of these will generate an \texttt{:ERROR:} response which must be dealt with. This means that the \texttt{:ERROR:} command is extremely complex and confusing to use. A possible solution might be to move away from using arguments to specify the error and instead adopt the same style used by HTTP. A set of errors codes could be used, with numbers between particular ranges reserved for errors of a particular type. For example, the numbers 500-599 could be reserved for server errors, while numbers between 0-100 could be authorisation errors.
+Error handling has been one of the weaker areas of the GIM Protocol. Errors were mostly an after-thought and have several significant issues which need to be addressed. For example, there is currently no easy way of matching an error to a particular command. While it is possible to work backwards by counting the number of responses until we find the matching command it is not practical and it is overly complicated to do this. One solution might be introducing sequence numbers to the protocol, similar to SIP (RFC 3261). Each command could be assigned a sequence number or unique identifier of some type. Responses could use the same identifier so that the commands and responses could be easily matched. However this would add a lot of overhear and unnecessary complexity to the protocol, something which we have tried to avoid. Another big problem with errors is the sheer number of possible errors. Almost every command can generate several errors, and every error must have a unique argument identifying the type of error. The server specifies over 70 possible error conditions, and every one of these will generate an \texttt{:ERROR:} response which must be dealt with. This means that the \texttt{:ERROR:} command is extremely complex and confusing to use. A possible solution might be to move away from using arguments to specify the error and instead adopt the same style used by HTTP. A set of errors codes could be used, with numbers between particular ranges reserved for errors of a particular type. For example, the numbers 500-599 could be reserved for server errors, while numbers between 0-100 could be authorisation errors.
 
 The protocol has changed considerably since its first draft and has undergone substantial improvements in terms of ease of use, simplicity, and consistency. Although there are still some minor tweaks which could be made to further the improve the protocol, it is currently in a stable and usable state. Future extensions to the protocol might include the addition of support for other features such as file transfers and VoIP.
