--- a/TP3/dissertation/Implementation/server.tex
+++ b/TP3/dissertation/Implementation/server.tex
@@ -1,7 +1,12 @@
 \section{Server}
 
-\subsection{Networking and Sockets}
+This section will analyse how well the server implementation fulfils the design outlined in section \ref{ServerDesign}. In general, and apart from some issues with threading and concurrency, the server followed the design very closely and require very few design changes from start to completion. The most common problems experience with the server were related to typos which caused spelling and syntactic errors in the responses it generated.
 
-\subsection{Buffers}
+\subsection{Networking}
+
+
+\subsection{Concurrency}
+
+\subsection{Workers}
 
 \subsection{Detecting Abuse and Enforcing Limits}
