--- a/TP3/dissertation/Design/server.tex
+++ b/TP3/dissertation/Design/server.tex
@@ -1,4 +1,5 @@
 \section{Server Design}
+\label{ServerDesign}
 
 The GIM server is primarily responsible for synchronising the communication between the connected clients and keeping a persistent record of user information. In particular the server is responsible for:
 
@@ -19,7 +20,7 @@ From the very beginning the server was designed to be secure, scalable, and simp
 In order to manage this, the server generates a new worker for every connected client. This new worker acts as the single point of contact for its respective client. This greatly simplifies the design of the server as we can treat each connection individually and allows the server to easily scale to a large number of clients.
 
 % Refer to figures by numbers from written text
-\begin{figure}[!h]
+\begin{figure}
     \begin{center}
         \includegraphics[scale=0.6]{Design/diagrams/server_workers.png}
         \caption{The GIM Server with 3 connected clients, each with their own worker.}
@@ -31,7 +32,7 @@ Each worker has two buffers, one which stores commands read from the network (th
 
 The buffers allow the worker to run using several threads which increases the performance on multi-core systems as the server is able to read from the network, process commands, and write to the network in a truly concurrent fashion. This means that at any one time a worker could be handling up to three different commands, each at a different stage of execution, and still have several commands stored in the buffers waiting to be used.
 
-\begin{figure}[!h]
+\begin{figure}
     \begin{center}
         \includegraphics[scale=0.6]{Design/diagrams/worker_detail.png}
         \caption{The internal components of a single worker.}
@@ -42,27 +43,25 @@ The buffers allow the worker to run using several threads which increases the pe
 \subsection{User Accounts}
 A user is a registered account on the server with a unique identifier (an email address), password, nickname, personal message, display picture, status, and friend list. 
 
-% Change to a bulleted list
-\subsubsection{Identification}
-The user's identifier and password are used to authenticate the user at login. These cannot be changed one the account has been created. 
+\begin{itemize}
+\item{Identification:
+The user's identifier and password are used to authenticate the user at login. These cannot be changed one the account has been created.} 
 
+\item{Nickname:
+A user's nickname is a short and familiar name for that user. A nickname does not need to be unique and is not intended to be used as an identifier by the system. By default a user's nickname is their email address.}
 
-\subsubsection{Nickname}
-A user's nickname is a short and familiar name for that user. A nickname does not need to be unique and is not intended to be used as an identifier by the system. By default a user's nickname is their email address.
+\item{Personal Message:
+The personal message is a medium length message (usually only a sentence or two) which the user can use to share news or any information about themselves.}
 
+\item{Status:
+A user can have one of several statuses: Online, Away, Busy and Appear Offline. The first three statuses are used simply as an indication of the user's likelihood to respond to a message. The Appear Offline status allows the user to appear to other users as though they were not signed in but still receive updates and messages from other users.}
 
-\subsubsection{Personal Message}
-The personal message is a medium length message (usually only a sentence or two) which the user can use to share news or any information about themselves.
+\item{State:
+A user can have one of only two states, Online or Offline. States should not be confused with a user's status. A users status is simply an abstract representation, picked by the user, while a users state is an internal representation of the actual online state of the user. A user is only considered to be Online if they are connected using a client, and that client has logged-in successfully, otherwise they are considered to be Offline.}
 
-
-\subsubsection{Status}
-A user can have one of several statuses: Online, Away, Busy and Appear Offline. The first three statuses are used simply as an indication of the user's likelihood to respond to a message. The Appear Offline status allows the user to appear to other users as though they were not signed in but still receive updates and messages from other users.
-
-\subsubsection{State}
-A user can have one of only two states, Online or Offline. States should not be confused with a user's status. A users status is simply an abstract representation, picked by the user, while a users state is an internal representation of the actual online state of the user. A user is only considered to be Online if they are connected using a client, and that client has logged-in successfully, otherwise they are considered to be Offline.
-
-\subsubsection{Friend List}
-Each user has their own Friend List, a list of users who have accepted a friend request from the owner of the Friend List. When a user accepts a friend request, the sender and receiver are added to each other's Friend List.
+\item{Friend List:
+Each user has their own Friend List, a list of users who have accepted a friend request from the owner of the Friend List. When a user accepts a friend request, the sender and receiver are added to each other's Friend List.}
+\end{itemize}
 
 %Explain the design choices below. 
 \subsection{Client-to-Client Messaging}
@@ -107,7 +106,7 @@ To stop this the server must lock (claim ownership of) the data before it is upd
 
 The server must also make sure only to lock when needed, and not obtain a lock for objects it does not require. This simplest solution would be to lock the entire data object, and only allow reads and writes through a proxy. However this would be extremely costly in terms of performance as writes to individual objects inside the data object would block writes to other objects, meaning that at any one time only a single write could occur. Instead the data object must be clever and only lock the objects which are to be written to, allowing for simultaneously writes to separate objects whist still stopping race conditions from occurring.
 
-\begin{figure}[!h]
+\begin{figure}
     \begin{center}
         \includegraphics[scale=0.6]{Design/diagrams/server_locking.png}
         \caption{Synchronised workers using locking to read and write the updated value, giving the expected value of 7.}
@@ -116,7 +115,7 @@ The server must also make sure only to lock when needed, and not obtain a lock f
 \end{figure}
 
 \subsection{The Controller and Timeout Manager}
-Even though the server should be capable of functioning autonomously, some of the features defined by the protocol (in particular the \texttt{:BROADCAST:} command which allows the server to send a message to all of the clients connected to it) require some sort of interaction with the server in a manner which is different from the client-server model. The controller allows authorised users (defined by the operating system as able to connect to the session which is running the server) to interact through a command line interface with the server. They are then able to execute several several commands defined by the controller (not to be confused with protocol commands, controller commands are completely independant) to broadcast messages and control the server. 
+Even though the server should be capable of functioning autonomously, some of the features defined by the protocol (in particular the \texttt{:BROADCAST:} command which allows the server to send a message to all of the clients connected to it) require some sort of interaction with the server in a manner which is different from the client-server model. The controller allows authorised users (defined by the operating system as able to connect to the session which is running the server) to interact through a command line interface with the server. They are then able to execute several several commands defined by the controller (not to be confused with protocol commands, controller commands are completely independent) to broadcast messages and control the server. 
 
 For example, the \texttt{QUIT} command tells the server to shut down and create a persistence file to store user data, while the following would send a \texttt{:BROADCAST:} command to all of the connected clients:
 
@@ -131,7 +130,7 @@ Due to the nature of the Controller and Timeout Manager, they both must run on s
         \begin{center}
             \includegraphics[scale=0.5]{Design/diagrams/server_uml.png}
             \caption{UML showing the structure of the GIM Server. Still needs a little work.}
-            \label{highLevelDia}
+            \label{umlDia}
         \end{center}
     \end{figure}
 \end{landscape}
