Fuckin' spelling, how does that work?

--- a/TP3/dissertation/dissertation.tex
+++ b/TP3/dissertation/dissertation.tex
@@ -14,7 +14,7 @@ GIM is a client/server instant messanging application implmented in the Java Lan
 
 \end{abstract}
 
-\begin{acknowledgments}
+\begin{acknowledgements}
 
 Thanks to Colin Perkins for supervising this project, and being the voice of reason in those rare moments when panic set in.
 
@@ -22,7 +22,7 @@ For his excellent art work, we would like to thank our fellow student Matt Rosza
 
 We would also like to thanks all of those who helped test the program, even in those early stages without the pretty GUI.
 
-\end{acknowledgments}
+\end{acknowledgements}
 
 \educationalconsent
 \tableofcontents
